# OpenGL-models

./: .gitignore  README.md
01-Begining_partOne/: README  SimpleFragmentShader.fragmentshader  compile.sh  main.cpp
02-Begining_partTwo/: AGL3-example  AGL3-example.cpp  AGL3Drawable.hpp  AGL3Window.cpp  AGL3Window.hpp  README
03-Maze/: CMakeLists.txt  main.cpp
03-Maze/src/: CMakeLists.txt
03-Maze/src/AGL/: AGL3Window.cpp
03-Maze/src/Main/: Background.cpp  Background.hpp  Line.cpp  Line.hpp  Shapes.cpp  Shapes.hpp
04-Maze3D/: CMakeLists.txt  main.cpp
04-Maze3D/src/AGL/: AGL3Drawable.hpp  AGL3Window.cpp  AGL3Window.hpp
04-Maze3D/src/Main/: Background.hpp  Cube.cpp  Cube.hpp  Shapes.hpp  Sphere.cpp  Sphere.hpp  TriangleInstances.cpp  TriangleInstances.hpp
04-Maze3D/src/common/: controls.cpp  controls.hpp
05-Bubbles/: main.cpp
05-Bubbles/src/: CMakeLists.txt
05-Bubbles/src/Main/: Background.cpp  Cube.cpp  Cube.hpp  Sphere.cpp  Sphere.hpp  SpheresInstances.cpp
05-Bubbles/src/common/: controls.cpp  shader.cpp
06-Earth/: main.cpp
06-Earth/hgt_files/: readme.txt
06-Earth/src/Main/: FileLoader.cpp  Misc.cpp  Sphere.hpp  SpheresInstances.cpp  SpheresInstances.hpp  Terrain.cpp
07-Texturing/: CMakeLists.txt  main.cpp
07-Texturing/shaders/mesh/: shader.fs  shader.vs
07-Texturing/shaders/metalic/: shader.fs  shader.vs
07-Texturing/shaders/perlin/: shader.fs  shader.vs
07-Texturing/src/Main/: FileLoader.cpp  FileLoader.hpp  Mesh.cpp  Mesh.hpp  Sphere.cpp  Terrain.hpp
07-Texturing/src/common/: controls.cpp  controls.hpp
(+3 files in other folders)
